--- a/index.html
+++ b/index.html
@@ -13,13 +13,42 @@
     <div class="container text-center">
         <div class="row">
           <div class="col">
-            Column
+            Arepa
+            <img src="../imagenes/Arepas.jpg" class="rounded mx-auto d-block" alt="..." width="200" height="200">
+            <ol class="list-group list-group-numbered">
+                <li class="list-group-item">Harina de Maiz</li>
+                <li class="list-group-item">Queso</li>
+                <li class="list-group-item">Ternera</li>
+                <li class="list-group-item">Mayonesa</li>
+              </ol>
           </div>
           <div class="col">
-            Column
+            Empanada
+            <img src="../imagenes/empanada.jpg" class="rounded mx-auto d-block" alt="..." width="200" height="200">
+            <ol class="list-group list-group-numbered">
+                <li class="list-group-item">Harina de Maiz</li>
+                <li class="list-group-item">Queso</li>
+                <li class="list-group-item">Pollo</li>
+                <li class="list-group-item">Perejil</li>
+              </ol>
           </div>
           <div class="col">
-            Column
+            Tequeños
+            <img src="../imagenes/Tequeños.jpg" class="rounded mx-auto d-block" alt="..." width="200" height="200">
+            <ol class="list-group list-group-numbered">
+                <li class="list-group-item">Harina de Trigo</li>
+                <li class="list-group-item">Queso</li>
+                <li class="list-group-item">Huevo</li>
+              </ol>
+          </div>
+          <div class="col">
+            Pollo con Patatas
+            <img src="../imagenes/pollo.jpg" class="rounded mx-auto d-block" alt="..." width="200" height="200">
+            <ol class="list-group list-group-numbered">
+                <li class="list-group-item">Pollo</li>
+                <li class="list-group-item">Patatas</li>
+                <li class="list-group-item">Pimientos</li>
+              </ol>
           </div>
         </div>
       </div>
@@ -32,5 +61,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" 
     integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" 
     crossorigin="anonymous"></script>
+    
 </body>
 </html>
