--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="row">
           <div class="col">
             Arepa
-            <img src="../imagenes/Arepas.jpg" class="rounded mx-auto d-block" alt="..." width="200" height="200">
+            <img src="./imagenes/Arepas.jpg" class="rounded mx-auto d-block" alt="..." width="200" height="200">
             <ol class="list-group list-group-numbered">
                 <li class="list-group-item">Harina de Maiz</li>
                 <li class="list-group-item">Queso</li>
@@ -24,7 +24,7 @@
           </div>
           <div class="col">
             Empanada
-            <img src="../imagenes/empanada.jpg" class="rounded mx-auto d-block" alt="..." width="200" height="200">
+            <img src="./imagenes/empanada.jpg" class="rounded mx-auto d-block" alt="..." width="200" height="200">
             <ol class="list-group list-group-numbered">
                 <li class="list-group-item">Harina de Maiz</li>
                 <li class="list-group-item">Queso</li>
@@ -34,7 +34,7 @@
           </div>
           <div class="col">
             Tequeños
-            <img src="../imagenes/Tequeños.jpg" class="rounded mx-auto d-block" alt="..." width="200" height="200">
+            <img src="./imagenes/Tequeños.jpg" class="rounded mx-auto d-block" alt="..." width="200" height="200">
             <ol class="list-group list-group-numbered">
                 <li class="list-group-item">Harina de Trigo</li>
                 <li class="list-group-item">Queso</li>
@@ -43,7 +43,7 @@
           </div>
           <div class="col">
             Pollo con Patatas
-            <img src="../imagenes/pollo.jpg" class="rounded mx-auto d-block" alt="..." width="200" height="200">
+            <img src="./imagenes/pollo.jpg" class="rounded mx-auto d-block" alt="..." width="200" height="200">
             <ol class="list-group list-group-numbered">
                 <li class="list-group-item">Pollo</li>
                 <li class="list-group-item">Patatas</li>
