--- a/index.html
+++ b/index.html
@@ -1,66 +1,134 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
-    crossorigin="anonymous">
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Los Fogones de Txema</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-  </head>
-  <body class="bd-example">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background-color: #f8f9fa;
+        }
+        .navbar {
+            background-color: #343a40;
+        }
+        .navbar-brand, .nav-link, .dropdown-item {
+            color: #ffffff !important;
+        }
+        .dropdown-menu {
+            background-color: #343a40;
+        }
+        .dropdown-item:hover {
+            background-color: #495057;
+        }
+        .list-group-item {
+            background-color: #ffffff;
+        }
+        .card {
+            margin: 20px 0;
+        }
+    </style>
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Los Fogones de Txema</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Principal</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Enlace al recetario</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Más opciones
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Acción</a></li>
+                            <li><a class="dropdown-item" href="#">Otra acción</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="#">Algo más aquí</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Buscar recetas</button>
+                </form>
+            </div>
+        </div>
+    </nav>
     <div class="container text-center">
         <div class="row">
-          <div class="col">
-            Arepa
-            <img src="./imagenes/Arepas.jpg" class="rounded mx-auto d-block" alt="..." width="200" height="200">
-            <ol class="list-group list-group-numbered">
-                <li class="list-group-item">Harina de Maiz</li>
-                <li class="list-group-item">Queso</li>
-                <li class="list-group-item">Ternera</li>
-                <li class="list-group-item">Mayonesa</li>
-              </ol>
-          </div>
-          <div class="col">
-            Empanada
-            <img src="./imagenes/empanada.jpg" class="rounded mx-auto d-block" alt="..." width="200" height="200">
-            <ol class="list-group list-group-numbered">
-                <li class="list-group-item">Harina de Maiz</li>
-                <li class="list-group-item">Queso</li>
-                <li class="list-group-item">Pollo</li>
-                <li class="list-group-item">Perejil</li>
-              </ol>
-          </div>
-          <div class="col">
-            Tequeños
-            <img src="./imagenes/Tequeños.jpg" class="rounded mx-auto d-block" alt="..." width="200" height="200">
-            <ol class="list-group list-group-numbered">
-                <li class="list-group-item">Harina de Trigo</li>
-                <li class="list-group-item">Queso</li>
-                <li class="list-group-item">Huevo</li>
-              </ol>
-          </div>
-          <div class="col">
-            Pollo con Patatas
-            <img src="./imagenes/pollo.jpg" class="rounded mx-auto d-block" alt="..." width="200" height="200">
-            <ol class="list-group list-group-numbered">
-                <li class="list-group-item">Pollo</li>
-                <li class="list-group-item">Patatas</li>
-                <li class="list-group-item">Pimientos</li>
-              </ol>
-          </div>
+            <div class="col">
+                <div class="card">
+                    <img src="../imagenes/Arepas.jpg" class="card-img-top" alt="Arepa" width="200" height="200">
+                    <div class="card-body">
+                        <h5 class="card-title">Arepa</h5>
+                        <ol class="list-group list-group-numbered">
+                            <li class="list-group-item">Harina de Maiz</li>
+                            <li class="list-group-item">Queso</li>
+                            <li class="list-group-item">Ternera</li>
+                            <li class="list-group-item">Mayonesa</li>
+                        </ol>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="../imagenes/empanada.jpg" class="card-img-top" alt="Empanada" width="200" height="200">
+                    <div class="card-body">
+                        <h5 class="card-title">Empanada</h5>
+                        <ol class="list-group list-group-numbered">
+                            <li class="list-group-item">Harina de Maiz</li>
+                            <li class="list-group-item">Queso</li>
+                            <li class="list-group-item">Pollo</li>
+                            <li class="list-group-item">Perejil</li>
+                        </ol>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="../imagenes/Tequeños.jpg" class="card-img-top" alt="Tequeños" width="200" height="200">
+                    <div class="card-body">
+                        <h5 class="card-title">Tequeños</h5>
+                        <ol class="list-group list-group-numbered">
+                            <li class="list-group-item">Harina de Trigo</li>
+                            <li class="list-group-item">Queso</li>
+                            <li class="list-group-item">Huevo</li>
+                        </ol>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="../imagenes/pollo.jpg" class="card-img-top" alt="Pollo con Patatas" width="200" height="200">
+                    <div class="card-body">
+                        <h5 class="card-title">Pollo con Patatas</h5>
+                        <ol class="list-group list-group-numbered">
+                            <li class="list-group-item">Pollo</li>
+                            <li class="list-group-item">Patatas</li>
+                            <li class="list-group-item">Pimientos</li>
+                        </ol>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
-     crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" 
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" 
-    crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" 
-    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" 
-    crossorigin="anonymous"></script>
-    
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.min.js"></script>
 </body>
 </html>
+
