--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="row">
             <div class="col">
                 <div class="card">
-                    <img src="../imagenes/Arepas.jpg" class="card-img-top" alt="Arepa" width="200" height="200">
+                    <img src="./imagenes/Arepas.jpg" class="card-img-top" alt="Arepa" width="200" height="200">
                     <div class="card-body">
                         <h5 class="card-title">Arepa</h5>
                         <ol class="list-group list-group-numbered">
@@ -83,7 +83,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="../imagenes/empanada.jpg" class="card-img-top" alt="Empanada" width="200" height="200">
+                    <img src="./imagenes/empanada.jpg" class="card-img-top" alt="Empanada" width="200" height="200">
                     <div class="card-body">
                         <h5 class="card-title">Empanada</h5>
                         <ol class="list-group list-group-numbered">
@@ -97,7 +97,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="../imagenes/Tequeños.jpg" class="card-img-top" alt="Tequeños" width="200" height="200">
+                    <img src="./imagenes/Tequeños.jpg" class="card-img-top" alt="Tequeños" width="200" height="200">
                     <div class="card-body">
                         <h5 class="card-title">Tequeños</h5>
                         <ol class="list-group list-group-numbered">
@@ -110,7 +110,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="../imagenes/pollo.jpg" class="card-img-top" alt="Pollo con Patatas" width="200" height="200">
+                    <img src="./imagenes/pollo.jpg" class="card-img-top" alt="Pollo con Patatas" width="200" height="200">
                     <div class="card-body">
                         <h5 class="card-title">Pollo con Patatas</h5>
                         <ol class="list-group list-group-numbered">
